<resources>
    <string name="app_name">COPE</string>
</resources>
